--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "fr-FR" }}">
   <head>
-    <meta charset="UTF-8">
-
-{% seo %}
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    {% seo %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
+    
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-  <head>
-    <title>TOC Generator for Markdown</title>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="{{ '/assets/css/toc.css?v=' | append: site.github.build_revision | relative_url }}" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="{{ '/js/jquery.toc.js?v=' | append: site.github.build_revision | relative_url }}"></script>
     <script src="{{ '/js/custom.jeedom.js?v=' | append: site.github.build_revision | relative_url }}"></script>
-
-
     <script type="text/javascript">
     $(function() {
    	/*** Fonction Toc plugin jquery qui crée un menu a partir du contenu de la page ***/
@@ -35,6 +30,7 @@
     </script>
 
   </head>
+  <body>
     <section class="page-header">
 	<img id="logo_jeedom" src="assets/logo_white.png"></img>
       	<h1 id="nom-plugin" class="project-name">{{ site.description | default: site.github.project_tagline }}</h1>
@@ -51,7 +47,8 @@
             <div class="site-footer-credits">Documentation pour Jeedom : {{ site.description }}.</div>
 	    <div class="site-footer-credits">Dépot de : {{ site.github.owner_name }}.</div>
 	    <div class="site-footer-credits">Url du dépot : <a href="{{ site.github.repository_url }}">{{ site.github.repository_url }}</a>.</div>
-	   </footer>
+	    <div class="site-footer-credits">Test : {{ site.data }}.</div>
+	</footer>
         </section>
     </section>
     {% if site.google_analytics %}
