--- a/docs/assets/css/toc.css
+++ b/docs/assets/css/toc.css
@@ -1,3 +1,6 @@
+---
+---
+
 /*
  * jQuery Table of Content Generator for Markdown v1.0
  *
@@ -13,11 +16,11 @@
  *   http://www.gnu.org/licenses/gpl.html
  */
 
-#toc, .toc, .mw-warning {
-    background-color: #F9F9F9;
+#toc, .toc, .mw-warning { 
     border: 1px solid #AAAAAA;
     font-size: 95%;
     padding: 5px;
+    background-color: #F9F9F9;
 }
 #toc h2, .toc h2 {
     border: medium none;
@@ -69,12 +72,12 @@
 }
 
 #toc, .toc, .mw-warning {
-    background-color: #E5E5E5; /*#DFF0D8*/
     border: 0 none;
+    background-color: #{{ site.themeCustom.menu-background-color }};/*#E5E5E5; /*#DFF0D8*/
 }
 	
 .toctext,.tocnumber,.toctoggle,#toctogglelink a {
- color: #606C71; /*#4C8350*/
+    color: #{{ site.themeCustom.menu-color }}; /*#606C71 /*#4C8350*/
 }
 
 #toc .toctoggle, .toc .toctoggle {
@@ -99,8 +102,9 @@
 	position: relative;
 	left: 20%;
 	width: 80%;
+	min-width: 75%;
 	margin: 0;
-	padding: 40px 0;	
+	padding: 40px 5px;	
 }
 
 /*Ajout d'une marge interieur gauche et droite au menu sommaire*/
@@ -113,7 +117,10 @@ a[title="Sommaire"] {
     display: none;
 }
 
-
+/*Titre du menu sommaire*/
+#toctitle a{
+     color: #{{ site.themeCustom.menu-title-color }};
+}
 
 /*
 * 
